<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Config_Drops" Id="{98399b7d-8020-4c6a-be77-9180c1755d41}">
    <Declaration><![CDATA[TYPE ST_Config_Drops :
STRUCT
	stValve: ST_Config_Valve;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>