<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAOut_Drops" Id="{a1d32d0e-a33f-4f2f-8773-b0b98bf5df08}">
    <Declaration><![CDATA[TYPE ST_PAOut_Drops :
STRUCT
	stValve: ST_PAOut_Valve;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>